--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,5 +10,6 @@ dependencies = [
     "psycopg2-binary>=2.9.10",
     "pyperclip>=1.9.0",
     "rich>=14.0.0",
+    "sendgrid>=6.12.4",
     "sqlalchemy>=2.0.41",
 ]
